--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,11 @@ dependencies:
   cupertino_icons: ^1.0.6
   get: ^4.6.6
   velocity_x: ^4.2.1
+  google_fonts: ^6.2.1
+  flutter_spinkit: ^5.2.1
+  http: ^1.2.2
+  intl: ^0.19.0
+  cached_network_image: ^3.4.1
 
 dev_dependencies:
   flutter_test:
